Added static analysis

--- a/ubuntu-for-analyze/Dockerfile
+++ b/ubuntu-for-analyze/Dockerfile
@@ -18,6 +18,8 @@ RUN useradd -m -s /bin/bash dockeruser && \
     echo "dockeruser:dockeruser" | chpasswd && \
     usermod -aG sudo dockeruser
 
+RUN echo "dockeruser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
 # Настройка SSH-сервера
 RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
     sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config && \
