--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ typing_extensions==4.12.2
 uvicorn==0.34.0
 fire~=0.7.0
 watchdog~=6.0.0
+python-decouple
+docker~=7.1.0
+paramiko~=3.5.0
+scp~=0.15.0
